add prospectus pdf link

--- a/world/index.html
+++ b/world/index.html
@@ -86,7 +86,7 @@ permalink: /world
       Joining Rails World as a sponsor means showcasing your brand to a global audience of Rails enthusiasts, developers, and industry leaders. Let's collaborate and make Rails World an unforgettable experience for all.
     </p>
     <br>
-    <a href="#" class="button button--light">View Prospectus</a>
+    <a href="https://public.3.basecamp.com/p/C7HPYMpM77kVYjfnFsoSJkrJ" target="_blank" class="button button--light">View Prospectus</a>
   </section>
   {% if site.data.world.sponsors %}
     {% include world/sponsors.html %}
