add confetti to celebrate button on homepage

--- a/world/index.html
+++ b/world/index.html
@@ -72,7 +72,7 @@ permalink: /world
             <h3>20 Years of Rails</h3>
             <div class="callout__description">
               <p>Celebrate an incredible milestone as Rails turns 20! Join us and help commemorate two decades of groundbreaking innovation. (Yes, there will be cake.)</p>
-              <button class="button button--red">Celebrate with us!</button>
+              <button id="celebrate" class="button button--red">Celebrate with us!</button>
             </div>
         </flex-container>
       </bordered-container>
@@ -92,3 +92,4 @@ permalink: /world
     {% include world/sponsors.html %}
   {% endif %}
 </content-container>
+<script src="/assets/scripts/confetti.min.js"></script>
