Tweak callout styling

--- a/world/index.html
+++ b/world/index.html
@@ -77,15 +77,20 @@ permalink: /world
 
   <section class="callout">
     <h2>Become a Sponsor</h2>
-    <br>
+    <br><br>
+
     <div class="callout__banner">
       <bordered-container>
         <flex-container>
-            <h3>20 Years of Rails</h3>
-            <div class="callout__description">
-              <p>Celebrate an incredible milestone as Rails turns 20! Join us and help commemorate two decades of groundbreaking innovation. (Yes, there will be cake.)</p>
-              <button id="celebrate" class="button button--red">Celebrate with us!</button>
-            </div>
+          <h3>20 Years of Rails</h3>
+          <div class="callout__description">
+            <p>
+              Celebrate an incredible milestone as Rails turns 20! Join us and help commemorate two decades of groundbreaking innovation.
+              <br>
+              (Yes, there will be cake.)
+            </p>
+            <button class="button button--red">Celebrate with us!</button>
+          </div>
         </flex-container>
       </bordered-container>
     </div>
@@ -93,7 +98,7 @@ permalink: /world
 
   <section class="sponsorship">
     <h2>Sponsor Rails World</h2>
-    <br>
+    <br><br>
     <p>
       Joining Rails World as a sponsor means showcasing your brand to a global audience of Rails enthusiasts, developers, and industry leaders. Let's collaborate and make Rails World an unforgettable experience for all.
     </p>
