--- a/world/index.html
+++ b/world/index.html
@@ -105,7 +105,7 @@ permalink: /world
   {% endif %}
 </content-container>
 
-<script src="/assets/world/scripts/confetti.min.js" defer></script>
+<script src="/assets/world/scripts/confetti.min.js"></script>
 <script type="text/javascript">
   let confetti = new Confetti('celebrate');
 
