Fix confetti button

--- a/world/index.html
+++ b/world/index.html
@@ -89,7 +89,9 @@ permalink: /world
               <br>
               (Yes, there will be cake.)
             </p>
-            <button class="button button--red">Celebrate with us!</button>
+            <button id="celebrate" class="button button--red">
+              Celebrate with us!
+            </button>
           </div>
         </flex-container>
       </bordered-container>
