Update button to sold out

--- a/world/index.html
+++ b/world/index.html
@@ -25,7 +25,7 @@ permalink: /world
       </p>
 
       <br>
-      <tito-button event="rails-world/rails-world-2023"></tito-button>
+      <tito-button event="rails-world/rails-world-2023">Sold out</tito-button>
     </div>
   </section>
 
