--- a/world/speakers.html
+++ b/world/speakers.html
@@ -4,20 +4,20 @@ title: Speakers
 layout: world/default
 ---
 
-{% assign sorted_speakers = site.world_speakers | sort: 'last_name' %}
+{% assign sorted_speakers = site.world_speakers | sort: 'first_name' %}
 {% assign keynote_speakers = sorted_speakers | where: 'keynote', true %}
-{% assign non_keynote_speakers = sorted_speakers | where: 'keynote', false %}
+{% assign non_keynote_speakers = sorted_speakers | where_exp: "speaker", "speaker.keynote != true" %}
 
 <content-container class="speakers__index">
   <h1>Speakers</h1>
-  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id eum amet architecto tempore voluptate, ipsa possimus sint assumenda, a reprehenderit animi vel voluptates quos temporibus, dolores esse vero qui doloribus.</p>
+  <p>Get inspired by our industry's brightest speakers as they share their expertise, insights, and success stories this October in Amsterdam.</p>
 
   <ul class="speakers__gallery">
     {% for speaker in keynote_speakers %}
-      <li>{% include world/speaker-card.html %}</li>
+      <li><a href="/world/speakers/{{ speaker.first_name | split: ' ' | first | downcase }}-{{ speaker.last_name | downcase }}">{% include world/speaker-card.html %}</a></li>
     {% endfor %}
     {% for speaker in non_keynote_speakers %}
-      <li>{% include world/speaker-card.html %}</li>
+      <li><a href="/world/speakers/{{ speaker.first_name | split: ' ' | first | downcase }}-{{ speaker.last_name | downcase }}">{% include world/speaker-card.html %}</a></li>
     {% endfor %}
   </ul>
 </content-container>
