--- a/world/index.html
+++ b/world/index.html
@@ -21,7 +21,7 @@ permalink: /world
       </p>
 
       <br>
-      <tito-button event="rails-world/rails-world-2023">Sold out</tito-button>
+      <button class="tito" disabled>Sold out</button>
     </div>
   </section>
 
