--- a/world/index.html
+++ b/world/index.html
@@ -47,13 +47,25 @@ permalink: /world
       <carousel-items scroll-interval="300">
         {% for speaker in keynote_speakers %}
           <div role="group" aria-label="speaker card">
-            <a href="/world/speakers/{{ speaker.path | split: '/' | last | remove_first: '.md' }}">{% include world/speaker-card.html %}</a>
+            <a
+              href="/world/speakers/{{ speaker.path | split: '/' | last | remove_first: '.md' }}"
+              data-turbo-frame="speaker_details"
+              data-turbo-action="advance"
+              data-turbo-preserve-focus>
+              {% include world/speaker-card.html %}
+            </a>
           </div>
         {% endfor %}
 
         {% for speaker in non_keynote_speakers %}
           <div role="group" aria-label="speaker card">
-            <a href="/world/speakers/{{ speaker.path | split: '/' | last | remove_first: '.md' }}">{% include world/speaker-card.html %}</a>
+            <a
+              href="/world/speakers/{{ speaker.path | split: '/' | last | remove_first: '.md' }}"
+              data-turbo-frame="speaker_details"
+              data-turbo-action="advance"
+              data-turbo-preserve-focus>
+              {% include world/speaker-card.html %}
+            </a>
           </div>
         {% endfor %}
 
@@ -104,6 +116,14 @@ permalink: /world
     {% include world/sponsors.html %}
   {% endif %}
 </content-container>
+
+<modal-component>
+  <modal-mask></modal-mask>
+  <turbo-frame
+    id="speaker_details" target="_top" class="speaker"
+    role="dialog" aria-modal="true" aria-labelledby="speaker_name" tabindex="-1">
+  </turbo-frame>
+</modal-component>
 
 <script src="/assets/world/scripts/confetti.min.js"></script>
 <script type="text/javascript">
