--- a/world/agenda/index.html
+++ b/world/agenda/index.html
@@ -8,3 +8,16 @@ title: Agenda
 {% assign sessions = site.world_sessions | where_exp: "session", "session.path contains '/day-1/'" | sort: "time" %}
 
 {% include world/agenda/items.html sessions=sessions %}
+
+
+<script type="text/javascript">
+  const currentDate = new Date().toDateString()
+
+  if (currentDate.match(/Oct 04 2023/)) {
+    window.location = "/world/agenda/day-1"
+  } else if (currentDate.match(/Oct 05 2023/)) {
+    window.location = "/world/agenda/day-2"
+  } else if (currentDate.match(/Oct 06 2023/)) {
+    window.location = "/world/agenda/day-3"
+  }
+</script>
