hide agenda link and update speaker carousel on home page

--- a/world/index.html
+++ b/world/index.html
@@ -32,7 +32,7 @@ permalink: /world
   </section>
 
   <section class="speakers">
-    <h2>First Speakers Confirmed</h2>
+    <h2>Meet The Speakers</h2>
 
     <carousel-component role="region" aria-label="carousel">
       <carousel-buttons>
@@ -69,18 +69,10 @@ permalink: /world
           </div>
         {% endfor %}
 
-        <div class="see-more-speakers">
-          {% if false %}
-            <a href="/world/speakers">See More Speakers</a>
-          {% endif %}
-          <p>More to be announced!</p>
-        </div>
       </carousel-items>
     </carousel-component>
 
-    {% if false %}
-      <a href="/world/speakers" class="button button--light">View All Speakers</a>
-    {% endif %}
+    <a href="/world/speakers" class="button button--light">View All Speakers</a>
   </section>
 
   <section class="callout">
