update agenda tabs and pages

--- a/world/agenda/day-1.html
+++ b/world/agenda/day-1.html
@@ -3,9 +3,8 @@ layout: world/agenda
 permalink: /world/agenda/day-1
 day: day-1
 title: Agenda
-published: false
 ---
 
-{% assign sessions = site.world_sessions | where_exp: "session", "session.path contains '/day-1/'" | sort: "time" %}
+{% assign sessions = site.world_sessions | where_exp: "session", "session.path contains '/day-1/'" | sort: "running_order" %}
 
 {% include world/agenda/items.html sessions=sessions %}
