--- a/_pages/foundation.html
+++ b/_pages/foundation.html
@@ -69,7 +69,9 @@ permalink: /foundation
         <hr class="divider" />
 
         <h3>Our Budget.</h3>
-        <p>The eight Core foundation members have together generously endowed the foundation with $1,000,000 USD in seed funding to make a real difference on all the aforementioned areas of improvement. Going forward, these members will contribute a combined $400,000/year.</p>
+        <p>The eight Core foundation members have together generously endowed the foundation with $1,000,000 USD in seed funding to make a real difference on all the aforementioned areas of improvement. </p>
+          
+        <p>Going forward, these Core members will contribute a combined $400,000/year, with a further $75,000/year from Contributing members, for a total budget of $475,000 dedicated to fulfilling our mission.</p>
 
         <p>We thus will not have to rely on funding from individual contributors.</p>
         
