Removing sponsorship prospectus

--- a/world/index.html
+++ b/world/index.html
@@ -95,7 +95,7 @@ permalink: /world
     </div>
   </section>
 
-  <section class="sponsorship">
+<!--   <section class="sponsorship">
     <h2>Sponsor Rails World</h2>
     <br>
     <p>
@@ -103,7 +103,7 @@ permalink: /world
     </p>
     <br>
     <a href="https://public.3.basecamp.com/p/C7HPYMpM77kVYjfnFsoSJkrJ" target="_blank" class="button button--light">View Prospectus</a>
-  </section>
+  </section> -->
   {% if site.data.world.sponsors %}
     {% include world/sponsors.html %}
   {% endif %}
