--- a/_pages/foundation.html
+++ b/_pages/foundation.html
@@ -79,7 +79,7 @@ permalink: /foundation
             </div>
           </div>
         </div>
-        <p>The next tier of membership is Contributing member, and we are pleased to have the support of the following Contributing members:</p>
+        <p>The next tier of membership is Contributing member, and we are pleased to have the further support of the following members:</p>
         <div class="trusted common-padding--bottom-small">
           <div class="container">
             <div class="trusted__blocks">
@@ -144,11 +144,11 @@ permalink: /foundation
         <hr class="divider" />
 
         <h3>Our Budget.</h3>
-        <p>The eight Core foundation members have together generously endowed the foundation with $1,000,000 USD in seed funding to make a real difference on all the aforementioned areas of improvement. </p>
+        <p>The eight Core foundation members have together generously endowed the foundation with $1,000,000 USD in seed funding to kick start the foundation and make a real difference on all the aforementioned areas of improvement. </p>
 
-        <p>Going forward, these Core members will contribute a combined $400,000/year, with a further $125,000/year from Contributing members, for a total budget of $525,000 dedicated to fulfilling our mission.</p>
+        <p>Going forward, these Core members will contribute a combined $400,000/year, with a further $150,000/year contributed from the Contributing members, for a total budget of $550,000 dedicated to fulfilling our mission.</p>
 
-        <p>We thus will not have to rely on funding from individual contributors.</p>
+        <p>We will not have to rely on funding from individual contributors.</p>
 
         <h3>Suggestions?</h3>
         <p>We are always open to hearing ideas and suggestions that align with our mission to improve the documentation, education, events, and marketing efforts around Rails.</p>
