End of event updates

--- a/world/index.html
+++ b/world/index.html
@@ -11,7 +11,7 @@ permalink: /world
   <section class="hero">
     <div class="hero__content">
 
-      <h1>Shaping the future of Ruby on Rails</h1>
+      <h1>That's a wrap!</h1>
       <p>October 5 & 6</p>
       <p class="hero__location">
         {% include world/icons/pin.html %}
@@ -21,18 +21,18 @@ permalink: /world
       </p>
 
       <br>
-      <button class="tito" disabled>Sold out</button>
+      <button class="tito" disabled>Videos coming soon</button>
     </div>
   </section>
 
   <section class="about">
     <p>
-      Rails World is a two-day, two track community conference featuring technical talks, demos, workshops, networking, and keynotes about the latest features and best practices in Rails development. Let’s build a stronger, more vibrant community for generations to come.
+      Rails World was a two-day, two track community conference featuring technical talks, demos, workshops, networking, and keynotes about the latest features and best practices in Rails development. There were 700+ Rails developers in attendance, 29 speakers, and one big birthday celebration.
     </p>
   </section>
 
   <section class="speakers">
-    <h2>Meet The Speakers</h2>
+    <h2>The Speakers</h2>
 
     <carousel-component role="region" aria-label="carousel">
       <carousel-buttons>
@@ -82,9 +82,9 @@ permalink: /world
           <h2>20 Years of Rails</h2>
           <div class="callout__description">
             <p>
-              Celebrate an incredible milestone as Rails turns 20! Join us and help commemorate two decades of groundbreaking innovation.
+              We celebrate an incredible milestone together - Rails turned 20! With an amazing first 20 years under our belt, we now look forward to what the next 20 will bring.
               <br>
-              (Yes, there will be cake.)
+              (Yes, there was cake.)
             </p>
             <button id="celebrate" class="button button--red">
               Celebrate with us!
