--- a/world/speakers.html
+++ b/world/speakers.html
@@ -10,7 +10,7 @@ layout: world/default
 
 <content-container class="speakers__index">
   <h1>Speakers</h1>
-  <p>Get inspired by our industry's brightest speakers as they share their expertise, insights, and success stories this October in Amsterdam.</p>
+  <p>Our industry's brightest speakers gathered in Amsterdam to share their expertise, insights, and success stories.</p>
   <ul class="speakers__gallery">
     {% for speaker in keynote_speakers %}
       <li>
