--- a/world/index.html
+++ b/world/index.html
@@ -82,12 +82,12 @@ permalink: /world
           <h2>20 Years of Rails</h2>
           <div class="callout__description">
             <p>
-              We celebrate an incredible milestone together - Rails turned 20! With an amazing first 20 years under our belt, we now look forward to what the next 20 will bring.
+              We celebrated an incredible milestone together - Rails turned 20! With an amazing first 20 years under our belt, we now look forward to what the next 20 will bring.
               <br>
               (Yes, there was cake.)
             </p>
             <button id="celebrate" class="button button--red">
-              Celebrate with us!
+              Click here.
             </button>
           </div>
         </flex-container>
