--- a/world/index.html
+++ b/world/index.html
@@ -21,7 +21,7 @@ permalink: /world
       </p>
 
       <br>
-      <button class="tito" disabled>Videos coming soon</button>
+      <a class="tito" href="https://www.youtube.com/playlist?list=PLHFP2OPUpCeY9IX3Ht727dwu5ZJ2BBbZP">Videos coming soon</a>
     </div>
   </section>
 
