Add link to videos playlist

--- a/world/index.html
+++ b/world/index.html
@@ -21,7 +21,12 @@ permalink: /world
       </p>
 
       <br>
-      <a class="tito" href="https://www.youtube.com/playlist?list=PLHFP2OPUpCeY9IX3Ht727dwu5ZJ2BBbZP">Videos coming soon</a>
+      <a
+        class="button prime"
+        href="https://www.youtube.com/playlist?list=PLHFP2OPUpCeY9IX3Ht727dwu5ZJ2BBbZP"
+        target="_blank">
+        View all videos
+      </a>
     </div>
   </section>
 
