updated file structure for sessions / agenda

--- a/world/world_2023/faq.html
+++ b/world/world_2023/faq.html
@@ -4,7 +4,7 @@ permalink: /world/2023/faq
 title: Frequently Asked Questions
 ---
 
-{% assign faqData = site.data.world.faq %} {% assign categories = faqData | map:
+{% assign faqData = site.data.world['2023'].faq %} {% assign categories = faqData | map:
 'category' %}
 
 <content-container class="faq">
