--- a/world/world_2023/index.html
+++ b/world/world_2023/index.html
@@ -3,7 +3,8 @@ layout: world/default
 permalink: /world/2023
 ---
 
-{% assign sorted_speakers = site.world_speakers | sort: 'last_name' %}
+<!-- {% assign sorted_speakers = site.world_speakers | sort: 'last_name' %} -->
+{% assign sorted_speakers = site.world_speakers | where_exp: 'item', 'item.path contains "2023"' | sort: 'last_name' %}
 {% assign keynote_speakers = sorted_speakers | where: 'keynote', true %}
 {% assign non_keynote_speakers = sorted_speakers | where_exp: "speaker", "speaker.keynote != true" | sort: "first_name" %}
 
