--- a/world/world_2023/speakers.html
+++ b/world/world_2023/speakers.html
@@ -4,7 +4,7 @@ title: Speakers
 layout: world/default
 ---
 
-{% assign sorted_speakers = site.world_speakers | sort: 'first_name' %}
+{% assign sorted_speakers = site.world_speakers | where_exp: 'item', 'item.path contains "2023"' | sort: 'last_name' %}
 {% assign keynote_speakers = sorted_speakers | where: 'keynote', true %}
 {% assign non_keynote_speakers = sorted_speakers | where_exp: "speaker", "speaker.keynote != true" %}
 
