--- a/index.html
+++ b/index.html
@@ -49,92 +49,92 @@ id: home
     <div class="trusted__blocks">
       <div class="trusted__block">
         <a href="https://basecamp.com" aria-label="Basecamp">
-          <img src="/assets/images/2023/logo-basecamp.svg" alt="Basecamp" />
+          <img src="/assets/images/logo-basecamp.svg" alt="Basecamp" />
         </a>
       </div>
       <div class="trusted__block">
         <a href="https://hey.com" aria-label="HEY">
-          <img src="/assets/images/2023/logo-hey.svg" alt="HEY" />
+          <img src="/assets/images/logo-hey.svg" alt="HEY" />
         </a>
       </div>
       <div class="trusted__block">
         <a href="https://github.com" aria-label="GitHub">
-          <img src="/assets/images/2023/logo-github.svg" alt="GitHub" />
+          <img src="/assets/images/logo-github.svg" alt="GitHub" />
         </a>
       </div>
       <div class="trusted__block">
         <a href="https://shopify.com" aria-label="Shopify">
-          <img src="/assets/images/2023/logo-shopify.svg" alt="Shopify" />
+          <img src="/assets/images/logo-shopify.svg" alt="Shopify" />
         </a>
       </div>
       <div class="trusted__block">
         <a href="https://twitch.tv" aria-label="Twitch">
-          <img src="/assets/images/2023/logo-twitch.svg" alt="Twitch" />
+          <img src="/assets/images/logo-twitch.svg" alt="Twitch" />
         </a>
       </div>
       <div class="trusted__block">
         <a href="https://dribbble.com" aria-label="Dribbble">
-          <img src="/assets/images/2023/logo-dribbble.svg" alt="Dribbble" />
+          <img src="/assets/images/logo-dribbble.svg" alt="Dribbble" />
         </a>
       </div>
       <div class="trusted__block">
         <a href="https://hulu.com" aria-label="Hulu">
-          <img src="/assets/images/2023/logo-hulu.svg" alt="Hulu" />
+          <img src="/assets/images/logo-hulu.svg" alt="Hulu" />
         </a>
       </div>
       <div class="trusted__block">
         <a href="https://zendesk.com" aria-label="Zendesk">
-          <img src="/assets/images/2023/logo-zendesk.svg" alt="Zendesk" />
+          <img src="/assets/images/logo-zendesk.svg" alt="Zendesk" />
         </a>
       </div>
       <div class="trusted__block">
         <a href="https://airbnb.com" aria-label="Airbnb">
-          <img src="/assets/images/2023/logo-airbnb.svg" alt="Airbnb" />
+          <img src="/assets/images/logo-airbnb.svg" alt="Airbnb" />
         </a>
       </div>
       <div class="trusted__block">
         <a href="https://squareup.com" aria-label="Square">
-          <img src="/assets/images/2023/logo-square.svg" alt="Square" />
+          <img src="/assets/images/logo-square.svg" alt="Square" />
         </a>
       </div>
       <div class="trusted__block">
         <a href="https://kickstarter.com" aria-label="Kickstarter">
-          <img src="/assets/images/2023/logo-kickstarter.svg" alt="Kickstarter" />
+          <img src="/assets/images/logo-kickstarter.svg" alt="Kickstarter" />
         </a>
       </div>
       <div class="trusted__block">
         <a href="https://heroku.com" aria-label="Heroku">
-          <img src="/assets/images/2023/logo-heroku.svg" alt="Heroku" />
+          <img src="/assets/images/logo-heroku.svg" alt="Heroku" />
         </a>
       </div>
       <div class="trusted__block">
         <a href="https://coinbase.com" aria-label="Coinbase">
-          <img src="/assets/images/2023/logo-coinbase.svg" alt="Coinbase" />
+          <img src="/assets/images/logo-coinbase.svg" alt="Coinbase" />
         </a>
       </div>
       <div class="trusted__block">
         <a href="https://soundcloud.com" aria-label="Soundcloud">
-          <img src="/assets/images/2023/logo-soundcloud.svg" alt="Soundcloud" />
+          <img src="/assets/images/logo-soundcloud.svg" alt="Soundcloud" />
         </a>
       </div>
       <div class="trusted__block">
         <a href="https://cookpad.com" aria-label="Cookpad">
-          <img src="/assets/images/2023/logo-cookpad.svg" alt="Cookpad" />
+          <img src="/assets/images/logo-cookpad.svg" alt="Cookpad" />
         </a>
       </div>
       <div class="trusted__block">
         <a href="https://www.doximity.com" aria-label="Doximity">
-          <img src="/assets/images/2023/logo-doximity.svg" alt="Doximity" />
+          <img src="/assets/images/logo-doximity.svg" alt="Doximity" />
         </a>
       </div>
       <div class="trusted__block">
         <a href="https://www.intercom.com" aria-label="Intercom">
-          <img src="/assets/images/2023/logo-intercom.svg" alt="Intercom" />
+          <img src="/assets/images/logo-intercom.svg" alt="Intercom" />
         </a>
       </div>
       <div class="trusted__block">
         <a href="https://www.fleetio.com" aria-label="Fleetio">
-          <img src="/assets/images/2023/logo-fleetio.svg" alt="Fleetio" />
+          <img src="/assets/images/logo-fleetio.svg" alt="Fleetio" />
         </a>
       </div>
     </div>
