--- a/world/index.html
+++ b/world/index.html
@@ -1,1 +1,46 @@
-Rails World landing page to go here!
+---
+title: Rails World
+description: Rails World is an annual two-day, two track Rails community conference
+permalink: /world
+---
+
+<div class="heading common-padding--bottom common-padding--top-small">
+  <div class="container">
+    <div class="heading__body">
+      <div class="heading__headline common-headline">
+        <h1>Rails World</h1>
+        <h4>Shaping the future of Ruby on Rails.</h4>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="text common-padding--bottom">
+  <div class="container">
+    <div class="text__body">
+      <div class="text__content common-content">
+        <h3>What is Rails World?</h3>
+        <p>Launched for the 20th anniversary of the Rails framework, Rails World is an annual two-day, two track community conference featuring technical talks, demos, workshops, networking, and keynotes about the latest features and best practices in Rails development.</p>
+
+        <hr class="divider" />
+
+        <h3>Next up.</h3>
+        <p>Rails World 2024 will take place in Toronto, CA. More information and full site coming soon.</p>
+
+        <hr class="divider" />
+
+        <h3>Previous editions.</h3>
+        <ul>
+            <li><a href="/world/2023">2023</a> Amsterdam, NL</li>
+        </ul>
+
+        <hr class="divider" />
+
+        <h3>Suggestions?</h3>
+        <p>Where would you like to see a future edition of Rails World? Drop your suggestion in <a href="https://app.todohelpers.com/forms/4758b5b0-d6f9-4f41-8041-992cc9b748fb">this suggestion form</a>.</p>
+
+      </div>
+    </div>
+  </div>
+</div>
+
