--- a/world/index.html
+++ b/world/index.html
@@ -1,7 +1,7 @@
 ---
 title: Rails World
 description: Rails World is an annual two-day, two track Rails community conference
-permalink: /world
+permalink: 
 ---
 
 <div class="heading common-padding--bottom common-padding--top-small">
