--- a/world/index.html
+++ b/world/index.html
@@ -25,6 +25,9 @@ permalink:
         <hr class="divider" />
 
         <h3>Next up.</h3>
+        
+        <p><img src="/assets/images/world-toronto-save-the-date.png"></p>
+        
         <p>Rails World 2024 will take place in Toronto, CA. More information and full site coming soon.</p>
 
         <hr class="divider" />
