--- a/world/index.html
+++ b/world/index.html
@@ -28,7 +28,7 @@ permalink:
         
         <p><img src="/assets/images/world-toronto-save-the-date.png"></p>
         
-        <p>Rails World 2024 will take place in Toronto, CA. More information and full site coming soon.</p>
+        <p>The next Rails World will take place in Toronto, CA **Sept 26 & 27, 2024**. More information and full site coming soon.</p>
 
         <hr class="divider" />
 
