--- a/world/index.html
+++ b/world/index.html
@@ -30,9 +30,9 @@ permalink:
         
         <p>The next Rails World will take place in Toronto, CA Sept 26 & 27, 2024. More information and full site coming soon.</p>
 
-        <h3>Become a sponsor.</h3>
+        <h3>Sponsor Rails World.</h3>
         
-        <p>Interested in sponsoring Rails World? <a href="https://rails-foundation.neetoform.com/d3f4fe83d6595c7af4d3">Download the prospectus here</a>, or reach out to <a href="mailto:sponsors@rubyonrails.org">sponsors@rubyonrails.org</a>.</p>
+        <p>Interested in becoming a sponsoring? <a href="https://rails-foundation.neetoform.com/d3f4fe83d6595c7af4d3">Download the 2024 prospectus here</a>, or reach out to <a href="mailto:sponsors@rubyonrails.org">sponsors@rubyonrails.org</a>.</p>
 
         <hr class="divider" />
 
