--- a/world/index.html
+++ b/world/index.html
@@ -32,7 +32,7 @@ permalink:
 
         <h3>Sponsor Rails World.</h3>
         
-        <p>Interested in becoming a sponsoring? <a href="https://rails-foundation.neetoform.com/d3f4fe83d6595c7af4d3">Download the 2024 prospectus here</a>, or reach out to <a href="mailto:sponsors@rubyonrails.org">sponsors@rubyonrails.org</a>.</p>
+        <p>Interested in becoming a sponsoring? <a href="https://public.3.basecamp.com/p/xuZrxDiHj7vQbFzATqz8U8gc">Download the 2024 prospectus here</a>, or reach out to <a href="mailto:sponsors@rubyonrails.org">sponsors@rubyonrails.org</a>.</p>
 
         <hr class="divider" />
 
