Adding Neha to foundation.html

--- a/_pages/foundation.html
+++ b/_pages/foundation.html
@@ -122,7 +122,7 @@ permalink: /foundation
 
         <ul>
           <li><a href="https://www.linkedin.com/in/darraghcurran/">Darragh Curran</a> (CTO, Intercom)</li>
-          <li><a href="https://www.linkedin.com/in/kyledaigle/">Kyle Daigle</a> (COO, GitHub)</li>
+          <li><a href="https://www.linkedin.com/in/nbatra/">Neha Batra</a> (VP of Engineering, GitHub)</li>
           <li><a href="https://www.linkedin.com/in/duncandavidson/">Duncan Davidson</a> (Technical Advisor, Office of the CEO, Shopify)</li>
           <li><a href="https://www.linkedin.com/in/sdavis7766/">Steve Davis</a> (President of Product & Technology, Procore)</li>
           <li><a href="https://www.linkedin.com/in/rosagutierrezescudero/">Rosa Gutiérrez</a> (Lead Programmer, 37signals)</li>
