--- a/_pages/foundation.html
+++ b/_pages/foundation.html
@@ -144,11 +144,11 @@ permalink: /foundation
         <hr class="divider" />
 
         <h3>Our Budget.</h3>
-        <p>The eight Core foundation members have together generously endowed the foundation with $1,000,000 USD in seed funding to kick start the foundation and make a real difference on all the aforementioned areas of improvement. </p>
+        <p>In 2022, the eight Core foundation members banded together to generously endow the foundation with $1,000,000 USD in funding to kick start the foundation and make a real difference on all the aforementioned areas of improvement. </p>
 
-        <p>Going forward, these Core members will contribute a combined $400,000/year, with a further $125,000/year contributed from the Contributing members, for a total budget of $525,000 dedicated to fulfilling our mission.</p>
+        <p>Going forward, each Core member has committed to contributing $50,000/year, with a further $25,000/year contributed from each of the Contributing members.</p>
 
-        <p>We will not have to rely on funding from individual contributors.</p>
+        <p>With a total budget of $525,000 dedicated to fulfilling our mission, we will not have to rely on funding from individual contributors.</p>
 
         <h3>Suggestions?</h3>
         <p>We are always open to hearing ideas and suggestions that align with our mission to improve the documentation, education, events, and marketing efforts around Rails.</p>
