--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@ id: home
         </a>
       </div>
       <div class="trusted__block">
-        <a href="https://twitch.tv" aria-label="Twitch">
-          <img src="/assets/images/logo-twitch.svg" alt="Twitch" />
+        <a href="https://instacart.com" aria-label="Instacart">
+          <img src="/assets/images/logo-instacart.svg" alt="Instacart" />
         </a>
       </div>
       <div class="trusted__block">
