Add doctolib in the list of company which uses Rails
We are a french unicorn which provides a booking management system for health care profesionnal.

We are serving 60M of users, 10k queries per second with our rails app everyday, on one of the biggest transactional database in Europe.

We are talking about our scalability issues in conferences like here: https://www.youtube.com/watch?v=LoF2vkYiICo

--- a/index.html
+++ b/index.html
@@ -137,6 +137,11 @@ id: home
           <img src="/assets/images/logo-fleetio.svg" alt="Fleetio" />
         </a>
       </div>
+      <div class="trusted__block">
+        <a href="https://www.doctolib.fr" aria-label="Doctolib">
+          <img src="/assets/images/logo-doctolib.svg" alt="Doctolib" />
+        </a>
+      </div>
     </div>
   </div>
 </div>
