[226] Refactor: Corrected 'ActionDispatch route URLs' to 'Action Dispatch routes URLs'.

--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@ end
         </div>
 
         <div class="example__content common-content">
-          <h3>Action Dispatch route URLs.</h3>
+          <h3>Action Dispatch routes URLs.</h3>
           <p>Configure how URLs connect to the controllers using the routing domain language. Routes expose the bundle of actions that go together as a resource: index, show, new, create, edit, update, destroy.</p>
         </div>
       </div>
