Unpublish features.html
Closes #223

--- a/_pages/features.html
+++ b/_pages/features.html
@@ -4,6 +4,7 @@ description:
 permalink: /features
 redirect_from:
   - /features/
+published: false
 ---
 
 <div class="heading common-padding--bottom common-padding--top-small">
