--- a/_pages/foundation.html
+++ b/_pages/foundation.html
@@ -99,6 +99,11 @@ permalink: /foundation
                 </a>
               </div>
               <div class="trusted__block">
+                <a href="https://makandra.de/en" aria-label="makandra">
+                  <img src="/assets/images/logo-makandra.svg" alt="makandra" />
+                </a>
+              </div>
+              <div class="trusted__block">
                 <a href="https://www.planetargon.com/" aria-label="Planet Argon">
                   <img src="/assets/images/logo-planetargon.png" alt="Planet Argon" />
                 </a>
