--- a/_pages/foundation.html
+++ b/_pages/foundation.html
@@ -126,12 +126,12 @@ permalink: /foundation
         <p>The current board members are:</p>
 
         <ul>
-          <li><a href="https://www.linkedin.com/in/darraghcurran/">Darragh Curran</a> (CTO, Intercom)</li>
           <li><a href="https://www.linkedin.com/in/nbatra/">Neha Batra</a> (VP of Engineering, GitHub)</li>
           <li><a href="https://www.linkedin.com/in/duncandavidson/">Duncan Davidson</a> (Technical Advisor, Office of the CEO, Shopify)</li>
           <li><a href="https://www.linkedin.com/in/sdavis7766/">Steve Davis</a> (President of Product & Technology, Procore)</li>
           <li><a href="https://www.linkedin.com/in/rosagutierrezescudero/">Rosa Gutiérrez</a> (Lead Programmer, 37signals)</li>
           <li><a href="https://www.linkedin.com/in/brunomiranda/">Bruno Miranda</a> (SVP, Engineering, Doximity)</li>
+          <li><a href="https://www.linkedin.com/in/ryansherlock/">Ryan Sherlock</a> (Director of Engineering, Intercom)</li>
           <li><a href="https://www.linkedin.com/in/valdivia-dev/">Jorge Valdivia</a> (CTO, Fleetio)</li>
           <li><a href="https://www.linkedin.com/in/tapster/">Miles Woodroffe</a> (Global CTO, Cookpad)</li>
         </ul>
