Update foundation.html with TableCheck logo

--- a/_pages/foundation.html
+++ b/_pages/foundation.html
@@ -113,6 +113,11 @@ permalink: /foundation
                   <img src="/assets/images/logo-renuo.svg" alt="Renuo" />
                 </a>
               </div>
+              <div class="trusted__block">
+                <a href="https://tablecheck.com/en/join" aria-label="TableCheck">
+                  <img src="/assets/images/logo-tablecheck.svg" alt="TableCheck" />
+                </a>
+              </div>
             </div>
           </div>
         </div>
