Update padding size on TableCheck logo foundation.html

--- a/_pages/foundation.html
+++ b/_pages/foundation.html
@@ -115,7 +115,7 @@ permalink: /foundation
               </div>
               <div class="trusted__block">
                 <a href="https://tablecheck.com/en/join" aria-label="TableCheck">
-                  <img src="/assets/images/logo-tablecheck-black.svg" alt="TableCheck" />
+                  <img src="/assets/images/logo-tablecheck-black.svg" alt="TableCheck" style="padding:7px" />
                 </a>
               </div>
             </div>
